bind event in a class

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   
-
-
+<input id="duration" type="text" placeholder="time">
+<button id="start">Start</button>   
+<button id="pause">Pause</button>   
 
   <script src="app.js"></script>
 </body>
