Centric approach to timer in DOM

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   
-<input id="duration" type="text" placeholder="time">
+<input id="duration" value="30" type="text" placeholder="time" >
 <button id="start">Start</button>   
 <button id="pause">Pause</button>   
 
