--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <button id="start">Start</button>   
 <button id="pause">Pause</button>   
 
-  <script src="app.js"></script>
+<script src="timer.js"></script>  
+<script src="app.js"></script>
+  
 </body>
 </html>
