--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
   
+<svg height="200" width="200">
+  <circle r="20" cx="30" cy="30"></circle>
+</svg>
+
+
+
+
 <input id="duration" value="30" type="text" placeholder="time" >
 <button id="start">Start</button>   
 <button id="pause">Pause</button>   
