--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
 </head>
 <body>
   
-<svg height="200" width="200">
-  <circle r="20" cx="30" cy="30"></circle>
+<svg height="400" width="400">
+  <circle 
+  r="190"
+   cx="200" 
+   cy="200"
+   fill="transparent"
+   stroke="teal"
+   stroke-width="15"
+   transform="rotate(-90 200 200)"
+   ></circle>
+   <!-- stroke-dasharray="565"
+   stroke-dashoffset="-30" -->
+    <!-- 2 * Math.PI * 90 =565-->
+    <!-- dashoffset negative for counter clockwise move -->
 </svg>
 
 
