--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-<svg height="400" width="400">
-  <circle 
-  r="190"
-   cx="200" 
-   cy="200"
-   fill="transparent"
-   stroke="teal"
-   stroke-width="15"
-   transform="rotate(-90 200 200)"
-   ></circle>
-   <!-- stroke-dasharray="565"
-   stroke-dashoffset="-30" -->
-    <!-- 2 * Math.PI * 90 =565-->
-    <!-- dashoffset negative for counter clockwise move -->
-</svg>
-
-
-
-
-<input id="duration" value="30" type="text" placeholder="time" >
-<button id="start">Start</button>   
-<button id="pause">Pause</button>   
+  <div class="timer">
+    <div class="controls">
+      <input id="duration" value="3" />
+      <div>
+        <button id="start"><i class="fas fa-play"></i></button>
+        <button id="pause"><i class="fas fa-pause"></i></button>
+      </div>
+    </div>
+    <svg class="dial">
+      <circle
+        fill="transparent"
+        stroke="green"
+        stroke-width="15"
+        r="190"
+        cx="0"
+        cy="200"
+        transform="rotate(-90 100 100)"
+      />
+    </svg>
+  </div> 
 
 <script src="timer.js"></script>  
 <script src="app.js"></script>
